docs: Added documentations for profile endpoints
