# docs/swagger.yaml
@@ -7,6 +7,20 @@ definitions:
       token:
         type: string
     type: object
+  domain.CreateOrderInput:
+    properties:
+      products:
+        items:
+          $ref: '#/definitions/domain.CreateOrderInputProduct'
+        type: array
+    type: object
+  domain.CreateOrderInputProduct:
+    properties:
+      id:
+        type: integer
+      quantity:
+        type: integer
+    type: object
   domain.RecoveryPasswordInput:
     properties:
       email:
@@ -57,7 +71,7 @@ paths:
         is created and the user can log into it.
       operationId: confirm-email
       parameters:
-      - description: account info
+      - description: Account info
         in: body
         name: input
         required: true
@@ -88,7 +102,7 @@ paths:
             $ref: '#/definitions/handler.response'
       summary: User Confirm Email
       tags:
-      - auth
+      - User Authorization
   /auth/password-recovery:
     post:
       consumes:
@@ -99,7 +113,7 @@ paths:
         This token is required to set a new password.'
       operationId: recovery-password
       parameters:
-      - description: account email
+      - description: Account email
         in: body
         name: input
         required: true
@@ -130,16 +144,16 @@ paths:
             $ref: '#/definitions/handler.response'
       summary: User Recovery Password
       tags:
-      - auth
+      - User Authorization
   /auth/password-update:
-    post:
+    put:
       consumes:
       - application/json
       description: Set new password. If the request is successful, the account password
         is changed for the specified new password.
       operationId: update-password
       parameters:
-      - description: account new password
+      - description: Account new password
         in: body
         name: input
         required: true
@@ -170,7 +184,7 @@ paths:
             $ref: '#/definitions/handler.response'
       summary: User Update Password
       tags:
-      - auth
+      - User Authorization
   /auth/sign-in:
     post:
       consumes:
@@ -179,7 +193,7 @@ paths:
         the service returns an authorization token.
       operationId: login
       parameters:
-      - description: account access
+      - description: Account access
         in: body
         name: input
         required: true
@@ -210,7 +224,7 @@ paths:
             $ref: '#/definitions/handler.response'
       summary: User Sign In
       tags:
-      - auth
+      - User Authorization
   /auth/sign-up:
     post:
       consumes:
@@ -222,7 +236,7 @@ paths:
         This token is required to confirm specified user email.'
       operationId: create-account
       parameters:
-      - description: account info
+      - description: Account info
         in: body
         name: input
         required: true
@@ -253,7 +267,208 @@ paths:
             $ref: '#/definitions/handler.response'
       summary: User Sign Up
       tags:
-      - auth
+      - User Authorization
+  /profile/:
+    get:
+      consumes:
+      - application/json
+      description: Get a user account.
+      operationId: get-user-account
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get User Account
+      tags:
+      - User Profile
+    put:
+      consumes:
+      - multipart/form-data
+      description: Update user account info.
+      operationId: update-user-account
+      parameters:
+      - description: User name
+        in: formData
+        name: name
+        type: string
+      - description: User profile image
+        in: formData
+        name: profile_image_file
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.response'
+      security:
+      - ApiKeyAuth: []
+      summary: Update User Account
+      tags:
+      - User Profile
+  /profile/orders:
+    get:
+      consumes:
+      - application/json
+      description: Get all user's orders.
+      operationId: get-orders
+      parameters:
+      - description: 'Pagination: page number'
+        in: query
+        name: page
+        type: string
+      - description: 'Pagination: amount of items per page'
+        in: query
+        name: pageSize
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.response'
+      security:
+      - ApiKeyAuth: []
+      summary: User Get Orders
+      tags:
+      - User Profile
+    post:
+      consumes:
+      - application/json
+      description: Create a new order. If the request is successful, a new order is
+        added to the user's list of orders and the stock of products in the catalog
+        is updated.
+      operationId: create-order
+      parameters:
+      - description: Order info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/domain.CreateOrderInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.response'
+      security:
+      - ApiKeyAuth: []
+      summary: User Create Order
+      tags:
+      - User Profile
+  /profile/orders/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get user's order by id.
+      operationId: get-order-by-id
+      parameters:
+      - description: Order id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.response'
+      security:
+      - ApiKeyAuth: []
+      summary: User Get Order By Id
+      tags:
+      - User Profile
 securityDefinitions:
   ApiKeyAuth:
     in: header
