# pkg/handler/auth.go
@@ -8,12 +8,12 @@ import (
 )
 
 // @Summary User Sign Up
-// @Tags auth
+// @Tags User Authorization
 // @Description Create a user account. With this account the user can place orders. If the request is successful, the service sends an e-mail to the specified email address with an email confirmation token as a URL param "confToken". For example: https://store.com/confirm-email?confToken=eyJhbGciOiJIU1iIR5csdDIkwErXVCJ9. This token is required to confirm specified user email.
 // @ID create-account
 // @Accept  json
 // @Produce  json
-// @Param input body domain.SignUpInput true "account info"
+// @Param input body domain.SignUpInput true "Account info"
 // @Success 200 {object} response
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
@@ -40,12 +40,12 @@ func (h *Handler) userSignUp(c *gin.Context) {
 }
 
 // @Summary User Confirm Email
-// @Tags auth
+// @Tags User Authorization
 // @Description Confirm the specified email when creating a user account and add a password for the account. If the request is successful, the user account is created and the user can log into it.
 // @ID confirm-email
 // @Accept  json
 // @Produce  json
-// @Param input body domain.ConfirmEmailInput true "account info"
+// @Param input body domain.ConfirmEmailInput true "Account info"
 // @Success 200 {object} response
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
@@ -72,12 +72,12 @@ func (h *Handler) userConfirmEmail(c *gin.Context) {
 }
 
 // @Summary User Sign In
-// @Tags auth
+// @Tags User Authorization
 // @Description Log into an existing user account. If the request is successful, the service returns an authorization token.
 // @ID login
 // @Accept  json
 // @Produce  json
-// @Param input body domain.SignInInput true "account access"
+// @Param input body domain.SignInInput true "Account access"
 // @Success 200 {object} response
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
@@ -104,12 +104,12 @@ func (h *Handler) userSignIn(c *gin.Context) {
 }
 
 // @Summary User Recovery Password
-// @Tags auth
+// @Tags User Authorization
 // @Description Recovery password. If the request is successful, the service sends an e-mail to the account email address with an email confirmation token as a URL param "confToken". For example: https://client.com/password-recovery?confToken=eyJhbGciOiJIU1iIR5csdDIkwErXVCJ9. This token is required to set a new password.
 // @ID recovery-password
 // @Accept  json
 // @Produce  json
-// @Param input body domain.RecoveryPasswordInput true "account email"
+// @Param input body domain.RecoveryPasswordInput true "Account email"
 // @Success 200 {object} response
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
@@ -137,17 +137,17 @@ func (h *Handler) recoveryUserPassword(c *gin.Context) {
 }
 
 // @Summary User Update Password
-// @Tags auth
+// @Tags User Authorization
 // @Description Set new password. If the request is successful, the account password is changed for the specified new password.
 // @ID update-password
 // @Accept  json
 // @Produce  json
-// @Param input body domain.UpdatePasswordInput true "account new password"
+// @Param input body domain.UpdatePasswordInput true "Account new password"
 // @Success 200 {object} response
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
 // @Failure default {object} response
-// @Router /auth/password-update [post]
+// @Router /auth/password-update [put]
 func (h *Handler) updateUserPassword(c *gin.Context) {
 	var input domain.UpdatePasswordInput
 	if err := c.BindJSON(&input); err != nil {
