# pkg/handler/profile.go
@@ -8,6 +8,18 @@ import (
 	"github.com/renlin-code/mock-shop-api/pkg/domain"
 )
 
+// @Summary Get User Account
+// @Security ApiKeyAuth
+// @Tags User Profile
+// @Description Get a user account.
+// @ID get-user-account
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} response
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /profile/ [get]
 func (h *Handler) getUserProfile(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -22,6 +34,20 @@ func (h *Handler) getUserProfile(c *gin.Context) {
 	Response(c, user)
 }
 
+// @Summary Update User Account
+// @Security ApiKeyAuth
+// @Tags User Profile
+// @Description Update user account info.
+// @ID update-user-account
+// @Accept  multipart/form-data
+// @Produce  json
+// @Param name formData string false "User name"
+// @Param profile_image_file formData file false "User profile image"
+// @Success 200 {object} response
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /profile/ [put]
 func (h *Handler) updateUserProfile(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -62,6 +88,19 @@ func (h *Handler) updateUserProfile(c *gin.Context) {
 	OK(c)
 }
 
+// @Summary User Create Order
+// @Security ApiKeyAuth
+// @Tags User Profile
+// @Description Create a new order. If the request is successful, a new order is added to the user's list of orders and the stock of products in the catalog is updated.
+// @ID create-order
+// @Accept  json
+// @Produce  json
+// @Param input body domain.CreateOrderInput true "Order info"
+// @Success 200 {object} response
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /profile/orders [post]
 func (h *Handler) userCreateOrder(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -86,6 +125,20 @@ func (h *Handler) userCreateOrder(c *gin.Context) {
 	OKId(c, id)
 }
 
+// @Summary User Get Orders
+// @Security ApiKeyAuth
+// @Tags User Profile
+// @Description Get all user's orders.
+// @ID get-orders
+// @Accept  json
+// @Produce  json
+// @Param page query string false "Pagination: page number"
+// @Param pageSize query string false "Pagination: amount of items per page"
+// @Success 200 {object} response
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /profile/orders [get]
 func (h *Handler) userGetAllOrder(c *gin.Context) {
 	var params domain.PaginationParams
 	if err := c.BindQuery(&params); err != nil {
@@ -112,6 +165,19 @@ func (h *Handler) userGetAllOrder(c *gin.Context) {
 	Response(c, orders)
 }
 
+// @Summary User Get Order By Id
+// @Security ApiKeyAuth
+// @Tags User Profile
+// @Description Get user's order by id.
+// @ID get-order-by-id
+// @Accept  json
+// @Produce  json
+// @Param id path int true "Order id"
+// @Success 200 {object} response
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /profile/orders/{id} [get]
 func (h *Handler) userGetOrderById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
